--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 APScheduler==3.7.0
-certifi==2020.12.5
+certifi==2021.5.30
+charset-normalizer==2.0.4
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
 fake-useragent==0.1.11
-python-dotenv==0.17.1
-python-telegram-bot==13.5
+idna==3.2
+more-itertools==8.9.0
+python-dotenv==0.19.0
+python-telegram-bot==13.7
 pytz==2021.1
+requests==2.26.0
 selenium==3.141.0
 six==1.16.0
 tornado==6.1
-tzlocal==2.1
-urllib3==1.26.5
+tzlocal==3.0
+urllib3==1.26.6
+webdriver-manager==3.4.2
