--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,6 @@ requests==2.26.0
 selenium==3.141.0
 six==1.16.0
 tornado==6.1
-tzlocal==3.0
+tzlocal==2.0.0  # txlocal 3.0 has conflicting dependencies with APScheduler 3.7.0
 urllib3==1.26.6
 webdriver-manager==3.4.2
