--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 configparser==5.0.2
 crayons==0.4.0
 fake-useragent==0.1.11
+gunicorn==20.1.0
 idna==3.2
 more-itertools==8.9.0
 python-dotenv==0.19.0
