--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-DEVELOPER_CHAT_ID= 'Developer chat ID here'
-TELEGRAM_TOKEN= 'Telegram bot token from BotFather here'
+DEVELOPER_CHAT_ID=<Developer chat ID here>
+TELEGRAM_TOKEN=<Telegram bot token from BotFather here>
+GOOGLE_CHROME_BIN=/app/.apt/usr/bin/google_chrome
+CHROMEDRIVER_PATH=/app/.chromedriver/bin/chromedriver
