--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,10 @@ idna==3.2
 more-itertools==8.9.0
 python-dotenv==0.19.0
 python-telegram-bot==13.7
-pytz==2021.1
 requests==2.26.0
 selenium==3.141.0
 six==1.16.0
 tornado==6.1
 tzlocal==2.0.0  # txlocal 3.0 has conflicting dependencies with APScheduler 3.7.0
 urllib3==1.26.6
-webdriver-manager==3.4.2
+# webdriver-manager==3.4.2  # Needed for local testing but not for Heroku deplyment
